# image_processing_library

./: CMakeLists.txt  README.md  setup.py
src/: library.cpp  library.h  main.cpp  tensor.cpp  tensor.h
tests/: source_processed.npy  test.py
